syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.authUser";

package authUser;

import public "google/protobuf/timestamp.proto";

service AuthUserService {
    rpc GetByAccount (ByAccountReq) returns (AuthUser) {}
}

message ByAccountReq {
    string account = 1;
}

message AuthUser {
    repeated string permissions = 1;
    repeated int32 roles = 2;
    int32 dept_id = 3;
    int32 id = 4;
    string password_encrypted = 5;
    int32 locked = 6;
}
